# lan_py_common

./: .gitignore  README.md  app_name  mypy.sh  pyproject.toml  pytest.sh  requirements.txt  run.sh  test.sh
notebooks/: notebook.ipynb  scatter2_widgets.ipynb
notes/tasks/: README.md  tasks.csv
notes/todo/: todo.csv
src/lan_py_common/: __init__.py  common.py  df.py  lib.py  math_tys.py  notebook.ipynb  plotting.py  test.py  traits.py
src/lan_py_common.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_df.py
