[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lan_py_common"
version = "0.1.0"
description = "Code common across my python projects"
authors = [{name = "Mohammed Alzakariya", email = "lanhikarixx@gmail.com"}]
dependencies = [
  "checkpipe"
]

[tool.setuptools]
packages = ["lan_py_common"]

[tool.setuptools.package-dir]
"" = "src"

